--- a/style.css
+++ b/style.css
@@ -1,60 +1,116 @@
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
+    box-sizing: border-box
     
 }
 body{
-    background-color: black;
+    background-color: #34495e;
+    color: #ecf0f1;
+    font-family: "Roboto", sans-serif;
     overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
 }
-
-main {
-    
-    color: white;
+main{
     display: flex;
     flex-direction: column;
-    min-height: 100vh; 
-    align-items: center;       
-    padding: 1rem;      
-    
-    gap: 1.5rem;              
-    text-align: center;
-  }
-  
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    max-width: 80rem;
+    margin: 0 auto;
+    gap: 1.5rem;
+}
 h1{
-    color: white;
+    text-align: center;
+}
+h3{
+    margin-top: 1.5rem;
+    font-size: 1rem;
+}
+h2{
+    font-size: 1rem;
+    margin-top: 1.5rem;
+}
+.numeros{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.5rem
+    
+}
+.numeros input{
+    margin-top: 1.5rem;
+    height: 3rem;
+    width: 7rem;
+    text-align: center;
+    outline: none;
+    border-radius: 0.7rem;
+    border: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.parte1{
+    background-color: #1e1e2f;
+    max-height: 100vh;
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 0.7rem;
+
+    textarea{
+        width: 100%;
+        height: 4.9rem;
+        outline: none;
+        resize: none;
+        background-color: rgb(255, 255, 255);
+        border-radius: 0.7rem;
+        padding: 0.6rem;
+        margin-top: 0.5rem;
+    }
+    textarea::placeholder{
+        color: #1e1e2f;
+        
+    }
+    button{
+        width: 100%;
+        margin-top: 0.5rem;
+        height: 2.5rem;
+        background-color:#00cec9;
+        border: none;
+        border-radius: 0.7rem;
+        color: #1e1e2f;
+        font-size: 0.9rem ;
+        font-weight: bold;
+        cursor: pointer;
+    }
+    #listaDeParticipantes {
+        height: 5rem;
+        overflow-y: auto;       
+        overflow-x: hidden;    
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+        li{
+            border: 1px #34495e solid;
+            background-color: #34495e;
+            border-radius: 0.7rem;
+            margin-top: 1rem;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: space-between;
+            font-size: 1.5rem;
+            
+            
+        }
+    }
+}
+.resultado p{
     font-size: 2rem;
     text-align: center;
-    margin-top: 0.5rem;
-}
-textarea{
     margin-top: 1rem;
-}
-textarea{
-    resize: none;
-    width: 100%;
-    height: 5rem;
-}
-input{
-    width: 5rem;
-    height: 3rem;
-    text-align: center;
 
 }
-input[type="number"]:focus {
-    outline: none;
-    box-shadow: none;
-    border: none;
-  }
-label{
-    color: white;
-}
-textarea:focus{
-    outline: none;
-}
-input:focus{
-    outline: none;
-}
-
